docs: separate README for PyPI and GitHub
- Create README_PYPI.md specifically for PyPI distribution
- Remove language links and add GitHub repo link in PyPI readme
- Add PyPI version badges to the main README.md
- Update pyproject.toml to use README_PYPI.md for packaging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "audio_features"
 version = "0.2.0"
 description = "Audio feature extraction, preprocessing, augmentation, and visualization utilities."
-readme = "README.md"
+readme = "README_PYPI.md"
 requires-python = ">=3.9,<3.14"
 license = "MIT"
 license-files = ["LICENSE"]
