refactor!: enforce float32 feature contract and deterministic augmentation
Standardize frame-level outputs to (n_frames, n_features) with float32 dtype
and add contract helpers for consistent feature shaping.
Introduce deterministic augmentation controls (rng/seed) and update pipeline
aggregation to operate on the new contract.
Refresh docs and READMEs to document the contract and batch extraction.
Expand test coverage for shapes, determinism, and error paths; add CI + lint.

BREAKING CHANGE: frame-level feature outputs now use (n_frames, n_features)
instead of mixed (n_features, n_frames)/(n_frames,) shapes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,15 @@ dev = ["pytest>=7", "pytest-cov", "ruff>=0.4", "black>=24", "mypy>=1.5"]
 [tool.setuptools]
 packages = { find = { exclude = ["tests*", "examples*", "docs*"] } }
 include-package-data = true
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["E", "F"]
+ignore = ["E501"]
+
+[tool.black]
+line-length = 100
+target-version = ["py39"]
